# mobileair_pico

./: CHANGELOG.md  CMakeLists.txt  README.md  pinout.md  version.cmake
.claude/: settings.local.json
docs/: nextpm_modbus.md
src/: device_mode.cpp  device_mode.h  logger.cpp  logger.h  lwipopts.h  main.cpp  version.h.in
src/modem/: modem.cpp  modem.h
src/portal/: captive_portal.cpp  captive_portal.h  dhcp_server.c  dhcp_server.h  dns_server.cpp  dns_server.h
src/sensors/: ds3231.cpp  ds3231.h  nextpm.cpp  nextpm.h
src/storage/: datalog.cpp  datalog.h  sdcard.cpp  sdcard.h
src/wifi/: wifi_credentials.cpp  wifi_credentials.h  wifi_manager.cpp  wifi_manager.h
